--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.40.0
 plotly==5.18.0
 pandas==2.2.2
 numpy==1.26.4
-scikit-learn==1.1.3  # Match local version
-joblib==1.0.0        # Match local version
+scikit-learn==1.5.0  # Compatible with Python 3.12
+joblib==1.4.2        # Compatible with scikit-learn 1.5.0
 matplotlib==3.9.2
 seaborn==0.13.2
